--- a/components/DialogComponent.html
+++ b/components/DialogComponent.html
@@ -35,7 +35,7 @@
 
 <ol class="breadcrumb">
   <li>Components</li>
-  <li>BoardComponent</li>
+  <li>DialogComponent</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -61,24 +61,11 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/board/board.component.ts</code>
+    <code>src/app/components/dialog/dialog.component.ts</code>
 </p>
 
-    <p class="comment">
-        <h3>Description</h3>
-    </p>
-    <p class="comment">
-        <p>Board Component</p>
-
-    </p>
 
 
-    <p class="comment">
-        <h3>Implements</h3>
-    </p>
-    <p class="comment">
-                    <code><a href="https://angular.io/api/core/OnInit" target="_blank" >OnInit</a></code>
-    </p>
 
 
 <section>
@@ -98,19 +85,19 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>app-board</code></td>
+                <td class="col-md-9"><code>app-dialog</code></td>
             </tr>
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./board.component.css</code></td>
+                <td class="col-md-9"><code>./dialog.component.css</code></td>
             </tr>
 
 
 
             <tr>
                 <td class="col-md-3">templateUrl</td>
-                <td class="col-md-9"><code>./board.component.html</code></td>
+                <td class="col-md-9"><code>./dialog.component.html</code></td>
             </tr>
 
 
@@ -128,21 +115,22 @@
     <h3 id="index">Index</h3>
     <table class="table table-sm table-bordered index-table">
         <tbody>
-
                 <tr>
                     <td class="col-md-4">
-                        <h6><b>Methods</b></h6>
+                        <h6><b>Properties</b></h6>
                     </td>
                 </tr>
                 <tr>
                     <td class="col-md-4">
                         <ul class="index-list">
                             <li>
-                                <a href="#ngOnInit">ngOnInit</a>
+                                    <span class="modifier">Public</span>
+                                <a href="#data">data</a>
                             </li>
                         </ul>
                     </td>
                 </tr>
+
 
 
 
@@ -158,15 +146,45 @@
             <tbody>
                 <tr>
                     <td class="col-md-4">
-<code>constructor()</code>
+<code>constructor(data: <a href="../interfaces/DialogData.html">DialogData</a>)</code>
                     </td>
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/board/board.component.ts:11</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="14" class="link-to-prism">src/app/components/dialog/dialog.component.ts:14</a></div>
                             </td>
                         </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                            <div>
+                                    <b>Parameters :</b>
+                                    <table class="params">
+                                        <thead>
+                                            <tr>
+                                                <td>Name</td>
+                                                    <td>Type</td>
+                                                <td>Optional</td>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                                <tr>
+                                                        <td>data</td>
+                                                  
+                                                        <td>
+                                                                        <code><a href="../interfaces/DialogData.html" target="_self" >DialogData</a></code>
+                                                        </td>
+                                                  
+                                                    <td>
+                                                            No
+                                                    </td>
+                                                    
+                                                </tr>
+                                        </tbody>
+                                    </table>
+                            </div>
+                    </td>
+                </tr>
             </tbody>
         </table>
 </section>
@@ -175,112 +193,101 @@
 
 
 
+
     <section>
     
-    <h3 id="methods">
-        Methods
-    </h3>
-    <table class="table table-sm table-bordered">
-        <tbody>
-            <tr>
-                <td class="col-md-4">
-                    <a name="ngOnInit"></a>
-                    <span class="name">
-                        <b>
-                            ngOnInit
-                        </b>
-                        <a href="#ngOnInit"><span class="icon ion-ios-link"></span></a>
-                    </span>
-                </td>
-            </tr>
-            <tr>
-                <td class="col-md-4">
-<code>ngOnInit()</code>
-                </td>
-            </tr>
+        <h3 id="inputs">
+            Properties
+        </h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="data"></a>
+                        <span class="name">
+                            <b>
+                                <span class="modifier">Public</span>
+                            data</b>
+                            <a href="#data"><span class="icon ion-ios-link"></span></a>
+                        </span>
+                    </td>
+                </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <i>Type : </i>        <code><a href="../interfaces/DialogData.html" target="_self" >DialogData</a></code>
+
+                        </td>
+                    </tr>
+                    <tr>
+                        <td class="col-md-4">
+                            <b>Decorators : </b>
+                            <br />
+                            <code>
+                                @Inject(MAT_DIALOG_DATA)<br />
+                            </code>
+                        </td>
+                    </tr>
+                        <tr>
+                            <td class="col-md-4">
+                                    <div class="io-line">Defined in <a href="" data-line="15" class="link-to-prism">src/app/components/dialog/dialog.component.ts:15</a></div>
+                            </td>
+                        </tr>
 
 
-            <tr>
-                <td class="col-md-4">
-                    <div class="io-line">Defined in <a href="" data-line="14"
-                            class="link-to-prism">src/app/board/board.component.ts:14</a></div>
-                </td>
-            </tr>
-
-
-            <tr>
-                <td class="col-md-4">
-
-                    <div class="io-description">
-                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
-
-                    </div>
-                </td>
-            </tr>
-        </tbody>
-    </table>
+            </tbody>
+        </table>
 </section>
 
 </div>
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, Inject } from &#x27;@angular/core&#x27;;
+import { MAT_DIALOG_DATA } from &#x27;@angular/material/dialog&#x27;;
 
-/**
- * Board Component
- */
+interface DialogData {
+  title: string;
+  content: string;
+}
+
 @Component({
-  selector: &#x27;app-board&#x27;,
-  templateUrl: &#x27;./board.component.html&#x27;,
-  styleUrls: [&#x27;./board.component.css&#x27;]
+  selector: &#x27;app-dialog&#x27;,
+  templateUrl: &#x27;./dialog.component.html&#x27;,
+  styleUrls: [&#x27;./dialog.component.css&#x27;]
 })
-export class BoardComponent implements OnInit {
-  constructor() {}
-
-  ngOnInit() {}
+export class DialogComponent {
+  constructor(@Inject(MAT_DIALOG_DATA) public data: DialogData) {}
 }
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;!-- &lt;section class&#x3D;&quot;board&quot;&gt;
-  &lt;app-todo class&#x3D;&quot;board__item&quot;&gt;&lt;/app-todo&gt;
-  &lt;mat-divider [vertical]&#x3D;&quot;true&quot;&gt;&lt;/mat-divider&gt;
-  &lt;app-doing class&#x3D;&quot;board__item&quot;&gt;&lt;/app-doing&gt;
-  &lt;mat-divider [vertical]&#x3D;&quot;true&quot;&gt;&lt;/mat-divider&gt;
-  &lt;app-done class&#x3D;&quot;board__item&quot;&gt;&lt;/app-done&gt;
-&lt;/section&gt; --&gt;
-&lt;app-tasks&gt;&lt;/app-tasks&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;h1 mat-dialog-title&gt;{{ data.title }}&lt;/h1&gt;
+&lt;mat-dialog-content&gt;{{ data.content }}&lt;/mat-dialog-content&gt;
+&lt;mat-dialog-actions&gt;
+  &lt;button mat-raised-button color&#x3D;&quot;warn&quot; [mat-dialog-close]&#x3D;&quot;true&quot;&gt;
+    Confirm
+  &lt;/button&gt;
+  &lt;button mat-raised-button color&#x3D;&quot;accent&quot; [mat-dialog-close]&#x3D;&quot;false&quot;&gt;
+    Cancel
+  &lt;/button&gt;
+&lt;/mat-dialog-actions&gt;
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./board.component.css</code>
+                    <code>./dialog.component.css</code>
                 </p>
-                <pre class="line-numbers"><code class="language-scss">.board {
+                <pre class="line-numbers"><code class="language-scss">:host {
+  min-width: 300px;
   display: flex;
-  width: 90%;
-  height: 80%;
-  margin: 40px auto 0;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  text-align: center;
+  flex-direction: column;
+  align-items: center;
 }
 
-.board__item {
-  margin: 0 5px;
-}
-
-@media only screen and (max-width: 1035px) {
-  .board__item {
-    margin: 0 20px;
-  }
-
-  mat-divider {
-    display: none;
-  }
+.mat-raised-button:not(:last-child) {
+  margin-right: 30px;
 }
 </code></pre>
     </div>
@@ -310,10 +317,10 @@ export class BoardComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><!-- <section class="board">  <app-todo class="board__item"></app-todo>  <mat-divider [vertical]="true"></mat-divider>  <app-doing class="board__item"></app-doing>  <mat-divider [vertical]="true"></mat-divider>  <app-done class="board__item"></app-done></section> --><app-tasks></app-tasks></div>'
+        var COMPONENT_TEMPLATE = '<div><h1 mat-dialog-title>{{ data.title }}</h1><mat-dialog-content>{{ data.content }}</mat-dialog-content><mat-dialog-actions>  <button mat-raised-button color="warn" [mat-dialog-close]="true">    Confirm  </button>  <button mat-raised-button color="accent" [mat-dialog-close]="false">    Cancel  </button></mat-dialog-actions></div>'
     var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'}];
     var DIRECTIVES = [];
-    var ACTUAL_COMPONENT = {'name': 'BoardComponent'};
+    var ACTUAL_COMPONENT = {'name': 'DialogComponent'};
 </script>
 <script src="../js/tree.js"></script>
 
@@ -348,7 +355,7 @@ export class BoardComponent implements OnInit {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
-            var COMPODOC_CURRENT_PAGE_URL = 'BoardComponent.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'DialogComponent.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
