--- a/components/SidenavComponent.html
+++ b/components/SidenavComponent.html
@@ -569,7 +569,7 @@ export class SidenavComponent implements OnInit {
       &lt;/a&gt;
       &lt;a
         mat-list-item
-        routerLink&#x3D;&quot;/user/signup&quot;
+        routerLink&#x3D;&quot;/authentication/signup&quot;
         routerLinkActive&#x3D;&quot;active&quot;
         *ngIf&#x3D;&quot;!(isLoggedIn$ | async)&quot;
         (click)&#x3D;&quot;drawer.close()&quot;
@@ -578,7 +578,7 @@ export class SidenavComponent implements OnInit {
       &lt;/a&gt;
       &lt;a
         mat-list-item
-        routerLink&#x3D;&quot;/user/login&quot;
+        routerLink&#x3D;&quot;/authentication/login&quot;
         routerLinkActive&#x3D;&quot;active&quot;
         *ngIf&#x3D;&quot;!(isLoggedIn$ | async)&quot;
         (click)&#x3D;&quot;drawer.close()&quot;
@@ -635,8 +635,8 @@ export class SidenavComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><mat-sidenav-container class="sidenav-container mat-app-background" [ngClass]="{ \'dark-theme\': isDarkTheme }">  <mat-sidenav    #drawer    class="sidenav"    fixedInViewport="true"    [attr.role]="(isHandset$ | async) ? \'dialog\' : \'navigation\'"    mode="over"  >    <mat-toolbar color="primary" class="mat-elevation-z2">Menu</mat-toolbar>    <mat-nav-list>      <a        mat-list-item        routerLink="/board"        routerLinkActive="active"        *ngIf="isLoggedIn$ | async"        (click)="drawer.close()"      >        My Board      </a>      <a        mat-list-item        routerLink="/user/signup"        routerLinkActive="active"        *ngIf="!(isLoggedIn$ | async)"        (click)="drawer.close()"      >        Sign Up      </a>      <a        mat-list-item        routerLink="/user/login"        routerLinkActive="active"        *ngIf="!(isLoggedIn$ | async)"        (click)="drawer.close()"      >        Log In      </a>      <a mat-list-item *ngIf="isLoggedIn$ | async" (click)="onLogout()">Log Out</a>    </mat-nav-list>  </mat-sidenav>  <mat-sidenav-content>    <app-topnav (toggleSidenav)="drawer.toggle()" (toggleTheme)="onToggleTheme()"></app-topnav>    <ng-content></ng-content>  </mat-sidenav-content></mat-sidenav-container></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'}];
+        var COMPONENT_TEMPLATE = '<div><mat-sidenav-container class="sidenav-container mat-app-background" [ngClass]="{ \'dark-theme\': isDarkTheme }">  <mat-sidenav    #drawer    class="sidenav"    fixedInViewport="true"    [attr.role]="(isHandset$ | async) ? \'dialog\' : \'navigation\'"    mode="over"  >    <mat-toolbar color="primary" class="mat-elevation-z2">Menu</mat-toolbar>    <mat-nav-list>      <a        mat-list-item        routerLink="/board"        routerLinkActive="active"        *ngIf="isLoggedIn$ | async"        (click)="drawer.close()"      >        My Board      </a>      <a        mat-list-item        routerLink="/authentication/signup"        routerLinkActive="active"        *ngIf="!(isLoggedIn$ | async)"        (click)="drawer.close()"      >        Sign Up      </a>      <a        mat-list-item        routerLink="/authentication/login"        routerLinkActive="active"        *ngIf="!(isLoggedIn$ | async)"        (click)="drawer.close()"      >        Log In      </a>      <a mat-list-item *ngIf="isLoggedIn$ | async" (click)="onLogout()">Log Out</a>    </mat-nav-list>  </mat-sidenav>  <mat-sidenav-content>    <app-topnav (toggleSidenav)="drawer.toggle()" (toggleTheme)="onToggleTheme()"></app-topnav>    <ng-content></ng-content>  </mat-sidenav-content></mat-sidenav-container></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'SidenavComponent'};
 </script>
