--- a/components/ModalComponent.html
+++ b/components/ModalComponent.html
@@ -35,7 +35,7 @@
 
 <ol class="breadcrumb">
   <li>Components</li>
-  <li>BoardComponent</li>
+  <li>ModalComponent</li>
 </ol>
 
 <ul class="nav nav-tabs" role="tablist">
@@ -61,16 +61,9 @@
     <h3>File</h3>
 </p>
 <p class="comment">
-    <code>src/app/board/board.component.ts</code>
+    <code>src/app/components/modal/modal.component.ts</code>
 </p>
 
-    <p class="comment">
-        <h3>Description</h3>
-    </p>
-    <p class="comment">
-        <p>Board Component</p>
-
-    </p>
 
 
     <p class="comment">
@@ -98,19 +91,19 @@
 
             <tr>
                 <td class="col-md-3">selector</td>
-                <td class="col-md-9"><code>app-board</code></td>
+                <td class="col-md-9"><code>app-modal</code></td>
             </tr>
 
             <tr>
                 <td class="col-md-3">styleUrls</td>
-                <td class="col-md-9"><code>./board.component.css</code></td>
+                <td class="col-md-9"><code>./modal.component.css</code></td>
             </tr>
 
 
 
             <tr>
                 <td class="col-md-3">templateUrl</td>
-                <td class="col-md-9"><code>./board.component.html</code></td>
+                <td class="col-md-9"><code>./modal.component.html</code></td>
             </tr>
 
 
@@ -140,11 +133,42 @@
                             <li>
                                 <a href="#ngOnInit">ngOnInit</a>
                             </li>
+                            <li>
+                                <a href="#onClose">onClose</a>
+                            </li>
                         </ul>
                     </td>
                 </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Inputs</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                <a href="#title">title</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
+                <tr>
+                    <td class="col-md-4">
+                        <h6><b>Outputs</b></h6>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <ul class="index-list">
+                            <li>
+                                <a href="#close">close</a>
+                            </li>
+                        </ul>
+                    </td>
+                </tr>
 
 
 
@@ -163,7 +187,7 @@
                 </tr>
                         <tr>
                             <td class="col-md-4">
-                                <div class="io-line">Defined in <a href="" data-line="11" class="link-to-prism">src/app/board/board.component.ts:11</a></div>
+                                <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/components/modal/modal.component.ts:10</a></div>
                             </td>
                         </tr>
 
@@ -171,8 +195,54 @@
         </table>
 </section>
 
+    <section>
+    <h3 id="inputs">Inputs</h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="title"></a>
+                        <b>title</b>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Reference/Global_Objects/string" target="_blank" >string</a></code>
 
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-2" colspan="2">
+                                    <div class="io-line">Defined in <a href="" data-line="9" class="link-to-prism">src/app/components/modal/modal.component.ts:9</a></div>
+                            </td>
+                        </tr>
+            </tbody>
+        </table>
+</section>
+    <section>
+    <h3 id="outputs">Outputs</h3>
+        <table class="table table-sm table-bordered">
+            <tbody>
+                <tr>
+                    <td class="col-md-4">
+                        <a name="close"></a>
+                        <b>close</b>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="col-md-4">
+                        <i>Type : </i>        <code><a href="https://angular.io/api/core/EventEmitter" target="_blank" >EventEmitter</a></code>
 
+                    </td>
+                </tr>
+                        <tr>
+                            <td class="col-md-2" colspan="2">
+                                    <div class="io-line">Defined in <a href="" data-line="10" class="link-to-prism">src/app/components/modal/modal.component.ts:10</a></div>
+                            </td>
+                        </tr>
+            </tbody>
+        </table>
+</section>
 
 
     <section>
@@ -203,7 +273,46 @@
             <tr>
                 <td class="col-md-4">
                     <div class="io-line">Defined in <a href="" data-line="14"
-                            class="link-to-prism">src/app/board/board.component.ts:14</a></div>
+                            class="link-to-prism">src/app/components/modal/modal.component.ts:14</a></div>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+
+                    <div class="io-description">
+                        <b>Returns : </b>        <code><a href="https://www.typescriptlang.org/docs/handbook/basic-types.html" target="_blank" >void</a></code>
+
+                    </div>
+                </td>
+            </tr>
+        </tbody>
+    </table>
+    <table class="table table-sm table-bordered">
+        <tbody>
+            <tr>
+                <td class="col-md-4">
+                    <a name="onClose"></a>
+                    <span class="name">
+                        <b>
+                            onClose
+                        </b>
+                        <a href="#onClose"><span class="icon ion-ios-link"></span></a>
+                    </span>
+                </td>
+            </tr>
+            <tr>
+                <td class="col-md-4">
+<code>onClose()</code>
+                </td>
+            </tr>
+
+
+            <tr>
+                <td class="col-md-4">
+                    <div class="io-line">Defined in <a href="" data-line="16"
+                            class="link-to-prism">src/app/components/modal/modal.component.ts:16</a></div>
                 </td>
             </tr>
 
@@ -225,62 +334,63 @@
 
 
     <div class="tab-pane fade  tab-source-code" id="c-source">
-        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit } from &#x27;@angular/core&#x27;;
+        <pre class="line-numbers compodoc-sourcecode"><code class="language-typescript">import { Component, OnInit, Input, Output, EventEmitter } from &#x27;@angular/core&#x27;;
 
-/**
- * Board Component
- */
 @Component({
-  selector: &#x27;app-board&#x27;,
-  templateUrl: &#x27;./board.component.html&#x27;,
-  styleUrls: [&#x27;./board.component.css&#x27;]
+  selector: &#x27;app-modal&#x27;,
+  templateUrl: &#x27;./modal.component.html&#x27;,
+  styleUrls: [&#x27;./modal.component.css&#x27;]
 })
-export class BoardComponent implements OnInit {
+export class ModalComponent implements OnInit {
+  @Input() title: string;
+  @Output() close &#x3D; new EventEmitter&lt;void&gt;();
+
   constructor() {}
 
   ngOnInit() {}
+
+  onClose() {
+    this.close.emit();
+  }
 }
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;!-- &lt;section class&#x3D;&quot;board&quot;&gt;
-  &lt;app-todo class&#x3D;&quot;board__item&quot;&gt;&lt;/app-todo&gt;
-  &lt;mat-divider [vertical]&#x3D;&quot;true&quot;&gt;&lt;/mat-divider&gt;
-  &lt;app-doing class&#x3D;&quot;board__item&quot;&gt;&lt;/app-doing&gt;
-  &lt;mat-divider [vertical]&#x3D;&quot;true&quot;&gt;&lt;/mat-divider&gt;
-  &lt;app-done class&#x3D;&quot;board__item&quot;&gt;&lt;/app-done&gt;
-&lt;/section&gt; --&gt;
-&lt;app-tasks&gt;&lt;/app-tasks&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;backdrop&quot; (click)&#x3D;&quot;onClose()&quot;&gt;&lt;/div&gt;
+&lt;mat-card class&#x3D;&quot;modal&quot;&gt;
+  &lt;mat-card-subtitle&gt;{{ title }}&lt;/mat-card-subtitle&gt;
+  &lt;mat-card-content&gt;
+    &lt;ng-content&gt;&lt;/ng-content&gt;
+  &lt;/mat-card-content&gt;
+&lt;/mat-card&gt;
 </code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-styleData">
                 <p class="comment">
-                    <code>./board.component.css</code>
+                    <code>./modal.component.css</code>
                 </p>
-                <pre class="line-numbers"><code class="language-scss">.board {
-  display: flex;
-  width: 90%;
-  height: 80%;
-  margin: 40px auto 0;
-  flex-wrap: wrap;
-  justify-content: space-around;
+                <pre class="line-numbers"><code class="language-scss">.backdrop {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 100;
+}
+
+/* Modal styles. */
+.modal.mat-card {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 300px;
   text-align: center;
-}
-
-.board__item {
-  margin: 0 5px;
-}
-
-@media only screen and (max-width: 1035px) {
-  .board__item {
-    margin: 0 20px;
-  }
-
-  mat-divider {
-    display: none;
-  }
+  z-index: 200;
+  border-radius: 4px;
 }
 </code></pre>
     </div>
@@ -310,10 +420,10 @@ export class BoardComponent implements OnInit {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><!-- <section class="board">  <app-todo class="board__item"></app-todo>  <mat-divider [vertical]="true"></mat-divider>  <app-doing class="board__item"></app-doing>  <mat-divider [vertical]="true"></mat-divider>  <app-done class="board__item"></app-done></section> --><app-tasks></app-tasks></div>'
+        var COMPONENT_TEMPLATE = '<div><div class="backdrop" (click)="onClose()"></div><mat-card class="modal">  <mat-card-subtitle>{{ title }}</mat-card-subtitle>  <mat-card-content>    <ng-content></ng-content>  </mat-card-content></mat-card></div>'
     var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'ForgotPasswordComponent', 'selector': 'app-forgot-password'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'ModalComponent', 'selector': 'app-modal'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'ResetPasswordComponent', 'selector': 'app-reset-password'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [];
-    var ACTUAL_COMPONENT = {'name': 'BoardComponent'};
+    var ACTUAL_COMPONENT = {'name': 'ModalComponent'};
 </script>
 <script src="../js/tree.js"></script>
 
@@ -348,7 +458,7 @@ export class BoardComponent implements OnInit {
        <script>
             var COMPODOC_CURRENT_PAGE_DEPTH = 1;
             var COMPODOC_CURRENT_PAGE_CONTEXT = 'component';
-            var COMPODOC_CURRENT_PAGE_URL = 'BoardComponent.html';
+            var COMPODOC_CURRENT_PAGE_URL = 'ModalComponent.html';
             var MAX_SEARCH_RESULTS = 15;
        </script>
 
