--- a/components/CreateTaskComponent.html
+++ b/components/CreateTaskComponent.html
@@ -917,26 +917,22 @@ export class CreateTaskComponent implements OnInit, OnDestroy {
     </div>
 
     <div class="tab-pane fade " id="c-templateData">
-        <pre class="line-numbers"><code class="language-html">&lt;div class&#x3D;&quot;backdrop&quot; (click)&#x3D;&quot;onClose()&quot;&gt;&lt;/div&gt;
-&lt;mat-card class&#x3D;&quot;modal&quot;&gt;
-  &lt;mat-card-subtitle&gt;{{ modalTitle }}&lt;/mat-card-subtitle&gt;
-  &lt;mat-card-content&gt;
-    &lt;form class&#x3D;&quot;modal__form&quot; [formGroup]&#x3D;&quot;taskForm&quot; (ngSubmit)&#x3D;&quot;onSave()&quot;&gt;
-      &lt;mat-form-field&gt;
-        &lt;input matInput placeholder&#x3D;&quot;title&quot; formControlName&#x3D;&quot;title&quot; /&gt;
-        &lt;mat-error *ngIf&#x3D;&quot;title.invalid&quot;&gt; {{ getTitleErrors() }} &lt;/mat-error&gt;
-      &lt;/mat-form-field&gt;
-      &lt;mat-form-field&gt;
-        &lt;textarea matInput placeholder&#x3D;&quot;description&quot; rows&#x3D;&quot;5&quot; formControlName&#x3D;&quot;description&quot;&gt;&lt;/textarea&gt;
-        &lt;mat-error *ngIf&#x3D;&quot;description.invalid&quot;&gt; {{ getDescriptionErrors() }} &lt;/mat-error&gt;
-      &lt;/mat-form-field&gt;
-      &lt;div class&#x3D;&quot;modal__actions&quot;&gt;
-        &lt;button type&#x3D;&quot;submit&quot; mat-button color&#x3D;&quot;primary&quot; [disabled]&#x3D;&quot;taskForm.invalid&quot;&gt;SAVE&lt;/button&gt;
-        &lt;button type&#x3D;&quot;button&quot; mat-button color&#x3D;&quot;warn&quot; (click)&#x3D;&quot;onClose()&quot;&gt;CANCEL&lt;/button&gt;
-      &lt;/div&gt;
-    &lt;/form&gt;
-  &lt;/mat-card-content&gt;
-&lt;/mat-card&gt;
+        <pre class="line-numbers"><code class="language-html">&lt;app-modal [title]&#x3D;&quot;modalTitle&quot; (close)&#x3D;&quot;onClose()&quot;&gt;
+  &lt;form class&#x3D;&quot;modal__form&quot; [formGroup]&#x3D;&quot;taskForm&quot; (ngSubmit)&#x3D;&quot;onSave()&quot;&gt;
+    &lt;mat-form-field&gt;
+      &lt;input matInput placeholder&#x3D;&quot;title&quot; formControlName&#x3D;&quot;title&quot; /&gt;
+      &lt;mat-error *ngIf&#x3D;&quot;title.invalid&quot;&gt; {{ getTitleErrors() }} &lt;/mat-error&gt;
+    &lt;/mat-form-field&gt;
+    &lt;mat-form-field&gt;
+      &lt;textarea matInput placeholder&#x3D;&quot;description&quot; rows&#x3D;&quot;5&quot; formControlName&#x3D;&quot;description&quot;&gt;&lt;/textarea&gt;
+      &lt;mat-error *ngIf&#x3D;&quot;description.invalid&quot;&gt; {{ getDescriptionErrors() }} &lt;/mat-error&gt;
+    &lt;/mat-form-field&gt;
+    &lt;div&gt;
+      &lt;button type&#x3D;&quot;submit&quot; mat-button color&#x3D;&quot;primary&quot; [disabled]&#x3D;&quot;taskForm.invalid&quot;&gt;SAVE&lt;/button&gt;
+      &lt;button type&#x3D;&quot;button&quot; mat-button color&#x3D;&quot;warn&quot; (click)&#x3D;&quot;onClose()&quot;&gt;CANCEL&lt;/button&gt;
+    &lt;/div&gt;
+  &lt;/form&gt;
+&lt;/app-modal&gt;
 </code></pre>
     </div>
 
@@ -944,44 +940,7 @@ export class CreateTaskComponent implements OnInit, OnDestroy {
                 <p class="comment">
                     <code>./create-task.component.css</code>
                 </p>
-                <pre class="line-numbers"><code class="language-scss">.backdrop {
-  position: fixed;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  width: 100vw;
-  background-color: rgba(0, 0, 0, 0.6);
-  z-index: 100;
-}
-
-/* Modal styles. */
-.modal.mat-card {
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 300px;
-  text-align: center;
-  z-index: 200;
-  border-radius: 4px;
-}
-
-.modal__form {
-  display: flex;
-  flex-direction: column;
-  width: 90%;
-  margin: auto;
-}
-
-.modal__actions {
-  display: flex;
-  justify-content: center;
-}
-
-mat-form-field {
-  margin-bottom: 8px;
-}
-</code></pre>
+                <pre class="line-numbers"><code class="language-scss"></code></pre>
     </div>
 
     <div class="tab-pane fade " id="c-tree">
@@ -1009,8 +968,8 @@ mat-form-field {
 <script src="../js/libs/htmlparser.js"></script>
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
-        var COMPONENT_TEMPLATE = '<div><div class="backdrop" (click)="onClose()"></div><mat-card class="modal">  <mat-card-subtitle>{{ modalTitle }}</mat-card-subtitle>  <mat-card-content>    <form class="modal__form" [formGroup]="taskForm" (ngSubmit)="onSave()">      <mat-form-field>        <input matInput placeholder="title" formControlName="title" />        <mat-error *ngIf="title.invalid"> {{ getTitleErrors() }} </mat-error>      </mat-form-field>      <mat-form-field>        <textarea matInput placeholder="description" rows="5" formControlName="description"></textarea>        <mat-error *ngIf="description.invalid"> {{ getDescriptionErrors() }} </mat-error>      </mat-form-field>      <div class="modal__actions">        <button type="submit" mat-button color="primary" [disabled]="taskForm.invalid">SAVE</button>        <button type="button" mat-button color="warn" (click)="onClose()">CANCEL</button>      </div>    </form>  </mat-card-content></mat-card></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
+        var COMPONENT_TEMPLATE = '<div><app-modal [title]="modalTitle" (close)="onClose()">  <form class="modal__form" [formGroup]="taskForm" (ngSubmit)="onSave()">    <mat-form-field>      <input matInput placeholder="title" formControlName="title" />      <mat-error *ngIf="title.invalid"> {{ getTitleErrors() }} </mat-error>    </mat-form-field>    <mat-form-field>      <textarea matInput placeholder="description" rows="5" formControlName="description"></textarea>      <mat-error *ngIf="description.invalid"> {{ getDescriptionErrors() }} </mat-error>    </mat-form-field>    <div>      <button type="submit" mat-button color="primary" [disabled]="taskForm.invalid">SAVE</button>      <button type="button" mat-button color="warn" (click)="onClose()">CANCEL</button>    </div>  </form></app-modal></div>'
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'ForgotPasswordComponent', 'selector': 'app-forgot-password'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'ModalComponent', 'selector': 'app-modal'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'ResetPasswordComponent', 'selector': 'app-reset-password'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'CreateTaskComponent'};
 </script>
