--- a/components/VerifyEmailComponent.html
+++ b/components/VerifyEmailComponent.html
@@ -295,7 +295,7 @@
 
             <tr>
                 <td class="col-md-4">
-                    <div class="io-description"><p>Handle sign up form errors -&gt; email field.</p>
+                    <div class="io-description"><p>Handle email errors.</p>
 </div>
 
                     <div class="io-description">
@@ -530,7 +530,7 @@ export class VerifyEmailComponent implements OnInit {
   }
 
   /**
-   * Handle sign up form errors -&gt; email field.
+   * Handle email errors.
    */
   getEmailErrors(): string {
     if (this.email.hasError(&#x27;required&#x27;)) {
@@ -624,7 +624,7 @@ export class VerifyEmailComponent implements OnInit {
 <script src="../js/libs/deep-iterator.js"></script>
 <script>
         var COMPONENT_TEMPLATE = '<div><mat-card class="mat-elevation-z6">  <p *ngIf="!errorMessage">Your email has been verfied. You can now log in.</p>  <p *ngIf="errorMessage">{{ errorMessage }}</p>  <div class="email" *ngIf="isVisible">    <p>Enter your email address to receive a new verification email.</p>    <mat-form-field>      <input matInput type="email" placeholder="Email" [formControl]="email" />    </mat-form-field>    <mat-error *ngIf="email.invalid && (email.dirty || email.touched)">{{ getEmailErrors() }}</mat-error>    <button mat-button color="primary" [disabled]="email.invalid" (click)="onSubmit()">Submit</button>  </div></mat-card></div>'
-    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
+    var COMPONENTS = [{'name': 'AppComponent', 'selector': 'app-root'},{'name': 'BoardComponent', 'selector': 'app-board'},{'name': 'CreateTaskComponent', 'selector': 'app-create-task'},{'name': 'DialogComponent', 'selector': 'app-dialog'},{'name': 'ForgotPasswordComponent', 'selector': 'app-forgot-password'},{'name': 'HomeComponent', 'selector': 'app-home'},{'name': 'LoginComponent', 'selector': 'app-login'},{'name': 'ModalComponent', 'selector': 'app-modal'},{'name': 'PageNotFoundComponent', 'selector': 'app-page-not-found'},{'name': 'ResetPasswordComponent', 'selector': 'app-reset-password'},{'name': 'SidenavComponent', 'selector': 'app-sidenav'},{'name': 'SignupComponent', 'selector': 'app-signup'},{'name': 'TasksCardListComponent', 'selector': 'app-tasks-card-list'},{'name': 'TasksComponent', 'selector': 'app-tasks'},{'name': 'TopnavComponent', 'selector': 'app-topnav'},{'name': 'VerifyEmailComponent', 'selector': 'app-verify-email'}];
     var DIRECTIVES = [];
     var ACTUAL_COMPONENT = {'name': 'VerifyEmailComponent'};
 </script>
